# ai-learn

./: .gitignore  modelscope_downloader.py  requirements.txt
01-huggingface/: 01_remote_api_call.py  02_download_model.py  03_local_api_call.py  04_bert.py
02-bert/: 01-tokenizer.py  02_download_dataset.py  hotel-intents.csv  shuffled-hotel-intents.csv
03-gpt/: 01_test.py  data.py  detect.py  detect_v2.py  nohup.out  tarin.py
04-call_llm/: huggingface_call.py  lmdeploy_call.py  ollama_call.py  vllm_call.py
06-data_to_train/: train_data.py
07-gguf/: identity.json
08-rag/: README.md  data_labor_law_parser.py  rag_law.py  rag_law_01.py  rag_law_02.py  rag_law_03.py  rag_law_04.py  rag_law_05.py  read_docstore.py  test.py
09-xtuner/: data_utils.py
10-lang_graph/: test.py
11-distill/: distill.py
12-mcp/: client.py  client_llm.py
12-mcp/example/: .env  (+4 more)
12-mcp/mcp-client/: README.md  client.py  pyproject.toml
13-graphrag/: README.md  graphrag_api.py  test_llm.py
14-function_calling/: chat_base.py  function_calling.py  multi_tool_use.py  parallel_tool_use.py
15-manus/: Hefei_weather.txt  functions.py  mini_manus.py  run_conv.py
16-whisper/: faster.py  whisper_stream.py  whisper_test.py
17-style_chat/: alpaca_style_output.json  cleaned_output.txt  convert_to_alpaca.py  data_convert.py  dict_to_json.py  generator_sentence.py  model_convert.py  raw_style_chat_data.json  streamlit_chat_app.py  style_chat_data.json  test01.py  test_embedding.py  xtuner_train_data_convert.py  xtuner_train_output.json
18-chain_of_thought/: test01.py  test02.py  test03.py
(+417 files in other folders)
